--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.4.0",
+		"leaflet": "^1.9.4",
+		"svelte-frappe-charts": "^1.10.0"
+	}
 }
